<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    tools:context=".DetailActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/detail_title"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        android:textStyle="bold"
        android:layout_gravity="fill_horizontal"
        tools:text="@string/school_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/detail_horizontal_margin"
        android:paddingRight="@dimen/detail_horizontal_margin"
        android:id="@+id/linearLayout">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="2">


            <TextView
                android:id="@+id/detail_campus_textview"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/campus"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/detail_accent_label"
                android:layout_columnWeight="5"
                android:layout_gravity="fill"
                android:layout_rowWeight="1" />

            <TextView
                android:id="@+id/campus"
                android:layout_width="0dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/detail_size"
                android:layout_columnWeight="8"
                android:layout_gravity="fill"
                tools:text="@string/number" />


            <TextView
                android:id="@+id/detail_phone_number_textview"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/detail_accent_label"
                android:layout_columnWeight="5"
                android:layout_gravity="fill"
                android:layout_rowWeight="1" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/detail_size"
                android:layout_columnWeight="8"
                android:layout_gravity="fill"
                tools:text="@string/number" />

            <TextView
                android:id="@+id/detail_grades_textview"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/grades"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/detail_accent_label"
                android:layout_columnWeight="5"
                android:layout_gravity="fill"
                android:layout_rowWeight="1" />

            <TextView
                android:id="@+id/grades"
                android:layout_width="0dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/detail_size"
                android:layout_columnWeight="8"
                android:layout_gravity="fill"
                tools:text="@string/number" />


            <TextView
                android:id="@+id/detail_interest_textview"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/specialize"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/detail_accent_label"
                android:layout_columnWeight="5"
                android:layout_gravity="fill"
                android:layout_rowWeight="1" />

            <TextView
                android:id="@+id/interest"
                android:layout_width="0dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/detail_size"
                android:layout_columnWeight="8"
                android:layout_gravity="fill"
                tools:text="@string/number" />

        </GridLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/detail_horizontal_margin"
            android:paddingRight="@dimen/detail_horizontal_margin"
            android:paddingTop="@dimen/detail_horizontal_margin"
            android:paddingBottom="@dimen/detail_horizontal_margin">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="@dimen/detail_sizes"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal"
            android:textSize="@dimen/detail_size"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/detail_horizontal_margin"
        android:paddingRight="@dimen/detail_horizontal_margin"
        android:paddingTop="@dimen/detail_horizontal_margin"
        android:paddingBottom="@dimen/detail_horizontal_margin">

        <TextView
            android:id="@+id/extracu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra"
            android:textSize="@dimen/detail_sizes"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sat_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal"
            android:textSize="@dimen/detail_size"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mrecyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        tools:listitem="@layout/sat_content"

        />

    <TextView
        android:id="@+id/empty_state"
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty_height"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/no_info"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    </LinearLayout>

</LinearLayout>