<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/tile_padding">

    <ImageView
        android:id="@+id/school_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tile_height"
        android:scaleType="centerCrop"
        android:src="@drawable/high_school"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/tile_height"
        android:alpha="0.3"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/school_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tile_height"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="@dimen/below"
        tools:text="@string/item_title"
        android:textColor="@color/colorPrimarySecondary"
        android:textSize="@dimen/school_name" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tile_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="@dimen/below"
        android:gravity="center"
        tools:text="@string/address"
        android:textColor="@color/colorPrimarySecondary"
        android:textSize="@dimen/article_titles" />

    <TextView
        android:id="@+id/campus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tile_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/share_button"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/article_titles"
        tools:text="@string/campus" />


    <TextView
        android:id="@+id/borough"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tile_height"
        android:layout_alignBottom="@+id/school_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginBottom="76dp"
        android:gravity="center"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/article_titles"
        tools:text="@string/borough" />

    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="@dimen/image_button_size"
        android:layout_height="@dimen/image_button_size"
        android:layout_marginRight="@dimen/md_keylines"
        android:layout_marginLeft="@dimen/md_keylines"
        android:src="@drawable/ic_share_black_24dp"
        android:layout_alignParentEnd="true"
        style="?android:attr/borderlessButtonStyle"
        android:tint="@color/titleColor"
        android:layout_alignParentRight="true" />
</RelativeLayout>
